# plate-gallery

./: .gitignore  CLAUDE.md  README.md  package-lock.json
.claude/: settings.local.json
backend/: .ev  Dockerfile  Makefile  alembic.ini  docker-compose.yml  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: comments.py  deps.py  favorites.py  leaderboard.py  map.py  me.py  plates.py  states.py  uploads.py  users.py  votes.py
backend/app/core/: config.py  errors.py  logging.py  security.py
backend/app/db/: models.py  session.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 0001_initial.py  0002_favorites.py
backend/app/schemas/: comment.py  common.py  leaderboard.py  plate.py  state.py  user.py  vote.py
backend/app/services/: feed.py  rate_limit.py  storage.py
backend/app/services/moderation/: duplicate_check.py  image_check.py  pipeline.py  text_check.py
backend/tests/: test_image_moderation.py
frontend/: .env.example  index.html  package-lock.json  package.json  wrangler.jsonc
frontend/src/: App.tsx  index.css
frontend/src/components/: Footer.tsx  LogoMark.tsx  Nav.tsx  PhotoSnap.tsx  Pill.tsx  Plate.tsx  PlateCard.tsx  ProtectedRoute.tsx  StateBadge.tsx  VoteControl.tsx
frontend/src/hooks/: AuthContext.ts  AuthProvider.tsx  useApi.ts  useRequireAuth.ts
plate gallery/: plate-gallery.html
plate gallery/pg/: app.jsx  chrome.jsx  plate.jsx  screen-detail.jsx  screen-feed.jsx  screen-leaderboard.jsx  screen-map.jsx  screen-profile.jsx  screen-state.jsx  screen-upload.jsx  tokens.jsx
(+19 files in other folders)
